--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev:server": "air",
     "dev:ui": "node browsersync.config.js",
     "dev": "npm-run-all --parallel dev:css dev:server dev:ui",
+    "preview": "vite preview",
     "build": "vite build"
   },
   "keywords": [],
